Add Open Graph meta tags for improved social sharing

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" type="image/xicon" href="/src/assets/fav-icon-danyeldev.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <meta property="og:title" content="Portfólio DanyelDev" />
+    <meta property="og:description" content="Desenvolvedor Full Stack pronto para criar todo o seu ecossistema digital, desde sites modernos até aplicações completas." />
+    <meta property="og:image" content="https://i.imgur.com/3WNcdFN.jpeg" />
+    <meta property="og:url" content="https://danyeldev.com" />
+    <meta property="og:type" content="website" />
+
     <title>DanyelDev</title>
   </head>
   <body>
